--- a/intro-css/index.html
+++ b/intro-css/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Css</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>Probando css!</h1>
 
     <!-- El span lo usamos para  -->
     <main>
-        <div>div1</div>
-        <div>div2</div>
-        <div class="divDistinto">Div que es distinto</div>
-        <p id="textoLorem">Lorem ipsum dolor <span>sit amet</span> consectetur.</p>
-        <p class="textoLorem">Lorem ipsum dolor sit amet consectetur.</p>
-        <p class="noHaganesto">Lorem ipsum dolor sit amet consectetur.</p>
+      <div>div1</div>
 
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-        </ul>
+      <div>div2</div>
+
+      <div class="divDistinto">Div que es distinto</div>
+
+      <p id="textoLorem">
+        Lorem ipsum dolor <span>sit amet</span> consectetur. </p>
+
+      <p class="textoLorem">Lorem ipsum dolor sit amet consectetur.</p>
+
+      <p class="noHaganesto">Lorem ipsum dolor sit amet consectetur.</p>
+
+      <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ul>
     </main>
-    
-</body>
+  </body>
 </html>
